tests/NormalTests/paczka1/small_fuzzy/26390161.err
Error in line 6: O2edHdMTS9 A9 20,4
Error in line 2: Azc8 S964 34,8
Error in line 7: p5rRev A9 60,5
Error in line 8: 9dCvX A9 19,5
